# Collage

./: .gitignore  CMakeLists.txt  README.md  collage.py
src/: CMakeLists.txt  main.cpp
src/MainWindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
